--- a/index.html
+++ b/index.html
@@ -289,20 +289,19 @@
               </div>
             </div>
           </div>
-          <div class="col3 col-three-12 col-two-12 a"></div>
-          <!--
+          
           <div class="col3 col-three-12 col-two-12 a">
             <div class="box">
               <div class="first">
-                <a href="https://shubhanshu-graphics.netlify.app/" class="im"><img src="./images/Project11.webp" alt="" height="200px" width="370px"></a>
+                <a href="https://shubhanshu-weddingplanner.netlify.app/" class="im"><img src="./images/Project14.webp" alt="" height="200px" width="370px"></a>
                 <div class="second">
-                  <a href="https://shubhanshu-graphics.netlify.app/" class="he"><h3>Graphics</h3></a>
-                  <p><a href="https://shubhanshu-graphics.netlify.app/" class="par">This Is Build Using HTML CSS JAVASCRIPT. it is fully responsive ui for all devices</a></p>
-                  <a href="https://shubhanshu-graphics.netlify.app/" class="b"><button class="btn">Click Here</button></a>
+                  <a href="https://shubhanshu-weddingplanner.netlify.app/" class="he"><h3>Wedding Planner</h3></a>
+                  <p><a href="https://shubhanshu-weddingplanner.netlify.app/" class="par">This Is Build Using HTML CSS JAVASCRIPT. it is fully responsive ui for all devices</a></p>
+                  <a href="https://shubhanshu-weddingplanner.netlify.app/" class="b"><button class="btn">Click Here</button></a>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
 
       
